--- a/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/Decorator/PatchCommandHandlerDecoratorTest.php.twig
@@ -12,22 +12,27 @@ use {{ projectName }}\Application\{{ entityName }}\Command\Validation\Validation
 use \Phake;
 
 /**
-* Class PatchCommandHandlerDecoratorTest
-* This class permits to test the PatchCommandHandlerDecorator class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Command\Handler
-**/
+ * Class PatchCommandHandlerDecoratorTest.
+ * This class permits to test the PatchCommandHandlerDecorator class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Command\Handler
+ */
 class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var PatchCommandHandlerDecorator */
     protected $commandHandlerDecorator;
+
     protected $validationHandler;
+
     protected $commandHandler;
+
     protected $command;
 
-    /*
-    * Configure the tests
-    */
+    /**
+     * Configure the tests.
+     */
     public function setUp()
     {
         $this->command = Phake::mock(PatchCommand::class);
@@ -38,32 +43,30 @@ class PatchCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
         $this->validationHandler = Phake::mock(PatchCommandValidationHandler::class);
 
         $this->specHandler = Phake::mock(PatchCommandSpecHandler::class);
-        Phake::when($this->specHandler )->process(Phake::anyParameters())->thenReturn(null);
+        Phake::when($this->specHandler)->process(Phake::anyParameters())->thenReturn(null);
 
         $this->commandHandlerDecorator = new PatchCommandHandlerDecorator(
-                                                $this->commandHandler,
-                                                $this->validationHandler,
-                                                $this->specHandler
-                                         );
+            $this->commandHandler,
+            $this->validationHandler,
+            $this->specHandler
+        );
     }
 
-    /*
-    * Test that CommandHandlerDecorator implements CommandHandlerInterface
-    */
+    /**
+     * Test that CommandHandlerDecorator implements CommandHandlerInterface.
+     */
     public function testInterfaces()
     {
         $this->assertInstanceOf(CommandHandlerInterface::class, $this->commandHandlerDecorator);
     }
 
-    /*
-    * Test the process method
-    */
+    /**
+     * Test the process method.
+     */
     public function testProcess()
     {
-        $result = $this->commandHandlerDecorator->process($this->command);
-        $this->assertEquals('some result', $result);
+        $this->assertEquals('some result', $this->commandHandlerDecorator->process($this->command));
         Phake::verify($this->validationHandler, Phake::times(1))->process(Phake::anyParameters());
         Phake::verify($this->commandHandler, Phake::times(1))->process(Phake::anyParameters());
-
     }
 }
