--- a/Skeleton/Api/Tests/Application/Command/Handler/Decorator/UpdateCommandHandlerDecoratorTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/Decorator/UpdateCommandHandlerDecoratorTest.php.twig
@@ -12,22 +12,27 @@ use {{ projectName }}\Application\{{ entityName }}\Command\Validation\Validation
 use \Phake;
 
 /**
-* Class UpdateCommandHandlerDecoratorTest
-* This class permits to test theUpdateCommandHandlerDecorator class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Command\Handler
-**/
+ * Class UpdateCommandHandlerDecoratorTest.
+ * This class permits to test theUpdateCommandHandlerDecorator class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Command\Handler
+ */
 class UpdateCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var UpdateCommandHandlerDecorator */
     protected $commandHandlerDecorator;
+
     protected $validationHandler;
+
     protected $commandHandler;
+
     protected $command;
 
-    /*
-    * Configure the tests
-    */
+    /**
+     * Configure the tests.
+     */
     public function setUp()
     {
         $this->command = Phake::mock(UpdateCommand::class);
@@ -41,29 +46,27 @@ class UpdateCommandHandlerDecoratorTest extends \PHPUnit_Framework_TestCase
         Phake::when($this->specHandler )->process(Phake::anyParameters())->thenReturn(null);
 
         $this->commandHandlerDecorator = new UpdateCommandHandlerDecorator(
-                                            $this->commandHandler,
-                                            $this->validationHandler,
-                                            $this->specHandler
-                                         );
+            $this->commandHandler,
+            $this->validationHandler,
+            $this->specHandler
+        );
     }
 
-    /*
-    * Test that CommandHandlerDecorator implements CommandHandlerInterface
-    */
+    /**
+     * Test that CommandHandlerDecorator implements CommandHandlerInterface.
+     */
     public function testInterfaces()
     {
         $this->assertInstanceOf(CommandHandlerInterface::class, $this->commandHandlerDecorator);
     }
 
-    /*
-    * Test the process function
-    */
+    /**
+     * Test the process function.
+     */
     public function testProcess()
     {
-        $result = $this->commandHandlerDecorator->process($this->command);
-        $this->assertEquals('some result', $result);
+        $this->assertEquals('some result', $this->commandHandlerDecorator->process($this->command));
         Phake::verify($this->validationHandler, Phake::times(1))->process(Phake::anyParameters());
         Phake::verify($this->commandHandler, Phake::times(1))->process(Phake::anyParameters());
-
     }
 }
