--- a/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
@@ -1,47 +1,55 @@
 <?php
+declare(strict_types = 1);
 
-namespace  Tests\Application\{{ entityName }}\Command;
+namespace Tests\Application\{{ entityName }}\Command;
 
 use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
 /**
-* Class NewCommandTest
-* This class permits to test the NewCommand class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Command
-*/
+ * Class NewCommandTest.
+ * This class permits to test the NewCommand class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Command
+ */
 class NewCommandTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var NewCommand */
     protected $command;
+{% for field in entityFields %}
+
+    /** @var string */
+    protected ${{ field.name }};
+{% endfor %}
 
     /**
-    * Configure the tests
-    */
+     * Configure the tests.
+     */
     public function setUp()
     {
 {% set constructorArgs = "" %}
 {% for field in entityFields %}
         $this->{{ field.name }} = '123456';
-{% set constructorArgs = constructorArgs ~ "                                        " ~ "$this->" ~ field.name ~ ",\n" %}
+{% set constructorArgs = constructorArgs ~ "            " ~ "$this->" ~ field.name ~ ",\n" %}
 {% endfor %}
         $this->command = new NewCommand(
 {{ constructorArgs|trim(",\n")}}
-                         );
+        );
     }
 
     /**
-    * Test NewCommand is instanceof CommandInterface
-    */
+     * Test NewCommand is instance of CommandInterface.
+     */
     public function testInterface()
     {
         $this->assertInstanceOf(CommandInterface::class, $this->command);
     }
 
     /**
-    * Verify that getters works
-    */
+     * Verify that getters works.
+     */
     public function testGetters()
     {
 {% for field in entityFields %}
