--- a/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
@@ -1,25 +1,28 @@
 <?php
 declare(strict_types = 1);
 
-namespace  Tests\Application\{{ entityName }}\Command;
+namespace Tests\Application\{{ entityName }}\Command;
 
 use {{ projectName }}\Application\{{ entityName }}\Command\PatchCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
-
 /**
-* Class PatchCommandTests
-* This class permits to test the PatchCommand class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Command
-**/
+ * Class PatchCommandTests.
+ * This class permits to test the PatchCommand class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Command
+ */
 class PatchCommandTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var PatchCommand */
     protected $command;
-    protected $message;
-    protected $transaction;
-    protected $jsonRequest;
+{% for field in entityFields %}
+
+    /** @var string */
+    protected ${{ field.name }};
+{% endfor %}
 
     /**
     * Configure the tests
@@ -29,25 +32,25 @@ class PatchCommandTest extends \PHPUnit_Framework_TestCase
 {% set constructorArgs = "" %}
 {% for field in entityFields %}
         $this->{{ field.name }} = '123456';
-{% set constructorArgs = constructorArgs ~ "                                        " ~ "$this->" ~ field.name ~ ",\n" %}
+{% set constructorArgs = constructorArgs ~ "            " ~ "$this->" ~ field.name ~ ",\n" %}
 {% endfor %}
 
         $this->command = new PatchCommand(
 {{ constructorArgs|trim(',\n') }}
-                              );
+        );
     }
 
     /**
-    * Test PatchCommand is instanceof CommandInterface
-    */
+     * Test PatchCommand is instance of CommandInterface.
+     */
     public function testInterface()
     {
         $this->assertInstanceOf(CommandInterface::class, $this->command);
     }
 
     /**
-    * Verify that getters works
-    */
+     * Verify that getters works.
+     */
     public function testGetters()
     {
 {% for field in entityFields %}
