--- a/Skeleton/Api/Tests/Application/Query/GetAllQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/GetAllQueryTest.php.twig
@@ -1,35 +1,35 @@
 <?php
+declare(strict_types = 1);
 
-namespace  Tests\Application\{{ entityName }}\Query;
+namespace Tests\Application\{{ entityName }}\Query;
 
 use {{ projectName }}\Application\{{ entityName }}\Query\GetAllQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
 /**
-* Class GetAllQueryTest
-* This class permits to test the GetAllQuery class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Query
-**/
+ * Class GetAllQueryTest.
+ * This class permits to test the GetAllQuery class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Query
+ */
 class GetAllQueryTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var GetAllQuery */
     protected $query;
-    protected $message;
-    protected $transaction;
-    protected $jsonRequest;
 
-    /*
-    * Configure the tests
-    */
+    /**
+     * Configure the tests
+     */
     public function setUp()
     {
         $this->query = new GetAllQuery();
     }
 
-    /*
-    *   Verify that Query implements QueryInterface
-    */
+    /**
+     * Verify that Query implements QueryInterface
+     */
     public function testInterface()
     {
         $this->assertInstanceOf(QueryInterface::class, $this->query);
