--- a/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
@@ -1,35 +1,35 @@
 <?php
+declare(strict_types = 1);
 
-namespace  Tests\Application\{{ entityName }}\Query;
+namespace Tests\Application\{{ entityName }}\Query;
 
 use {{ projectName }}\Application\{{ entityName }}\Query\SearchByQuery;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryInterface;
 
 /**
-* Class SearchByQueryTest
-* This class permits to test the SearchByQuery class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Application\Query
-**/
+ * Class SearchByQueryTest.
+ * This class permits to test the SearchByQuery class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Application\Query
+ */
 class SearchByQueryTest extends \PHPUnit_Framework_TestCase
 {
+    /** @var SearchByQuery */
     protected $query;
-    protected $message;
-    protected $transaction;
-    protected $jsonRequest;
 
-    /*
-    * Configure the tests
-    */
+    /**
+     * Configure the tests.
+     */
     public function setUp()
     {
-        $this->query = new SearchByQuery([],0,0);
+        $this->query = new SearchByQuery([], 0, 0);
     }
 
-    /*
-    * Verify that query implements QueryInterface
-    */
+    /**
+     * Verify that query implements QueryInterface.
+     */
     public function testInterface()
     {
         $this->assertInstanceOf(QueryInterface::class, $this->query);
