--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
@@ -24,16 +24,35 @@ use Sfynx\DddBundle\Layer\Presentation\Response\Handler\ResponseHandler;
 use Symfony\Component\HttpFoundation\Response;
 
 /**
-* Class ControllerTest
-* This class permits to test the Controller class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Presentation\Coordination\Command
-**/
+ * Class ControllerTest.
+ * This class permits to test the Command adapters of the Controller class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Presentation\Coordination\Command
+ */
 class ControllerTest extends \PHPUnit_Framework_TestCase
 {
+    protected $request;
 
-    /* Configure the test */
+    protected $resolver;
+
+    protected $responseHandler;
+
+    protected $entity;
+
+    /** @var Controller */
+    protected $controller;
+
+{% for commandQueryResponsibilitySegregation in controllerData %}
+{% if commandQueryResponsibilitySegregation.group == group %}
+    protected ${{ commandQueryResponsibilitySegregation.action }}Handler;
+{% endif %}
+{% endfor %}
+
+    /**
+     * Configure the tests.
+     */
     public function setUp()
     {
         $this->request = Phake::mock(SymfonyStrategy::class);
@@ -42,33 +61,33 @@ class ControllerTest extends \PHPUnit_Framework_TestCase
 
         $this->entity = ['id' => '00c1ab20-6e1e-4c54-83b4-62e677aba7ec'];
 
-        Phake::when($this->responseHandler)->create(Phake::anyParameters())->thenReturn($this->responseHandler);
-        Phake::when($this->responseHandler)->getResponse(Phake::anyParameters())->thenReturn(Phake::mock(Response::class));
-        Phake::when($this->request)->getContent(Phake::anyParameters())->thenReturn(json_encode(['id'=>123456]));
+        Phake::when($this->responseHandler)->create(Phake::anyParameters())
+            ->thenReturn($this->responseHandler);
+        Phake::when($this->responseHandler)->getResponse(Phake::anyParameters())
+            ->thenReturn(Phake::mock(Response::class));
+        Phake::when($this->request)->getContent(Phake::anyParameters())
+            ->thenReturn(json_encode(['id' => 123456]));
 
-{% set controllerArgs ="                                           " %}
+{% set controllerArgs = "" %}
 {% for commandQueryResponsibilitySegregation in controllerData %}
 {% if  commandQueryResponsibilitySegregation.group == group %}
-
-        $this->{{ commandQueryResponsibilitySegregation.action }}Handler = Phake::mock({{ commandQueryResponsibilitySegregation.action }}{{ group }}Handler::class);;
+        $this->{{ commandQueryResponsibilitySegregation.action }}Handler = Phake::mock({{ commandQueryResponsibilitySegregation.action|capitalize }}{{ group }}Handler::class);
         Phake::when($this->{{ commandQueryResponsibilitySegregation.action }}Handler)->process(Phake::anyParameters())->thenReturn($this->entity);
-{% set controllerArgs = controllerArgs  ~ "                                          " ~ "$this->" ~ commandQueryResponsibilitySegregation.action  ~ 'Handler,\n '%}
+{% set controllerArgs = controllerArgs  ~ "            " ~ "$this->" ~ commandQueryResponsibilitySegregation.action  ~ 'Handler,\n'%}
 {% endif %}
 {% endfor %}
 
-        $this->controller = new Controller($this->request,
-                                           $this->resolver,
-                                           $this->responseHandler,
-                                           {{ controllerArgs|trim(",\n ") }}
-                                            );
+        $this->controller = new Controller(
+            $this->request,
+            $this->resolver,
+            $this->responseHandler,
+{{ controllerArgs|trim(",\n") }}
+        );
     }
-
 {% for commandQueryResponsibilitySegregation in controllerData %}
-{% if  commandQueryResponsibilitySegregation.group == group %}
+{% if commandQueryResponsibilitySegregation.group == group %}
 
 {% include('Presentation/Coordination/Entity/Command/actions/' ~ commandQueryResponsibilitySegregation.action ~ '.php.twig') with {'action': commandQueryResponsibilitySegregation.action} %}
-
 {% endif %}
 {% endfor %}
-
 }
