--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/actions/delete.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/actions/delete.php.twig
@@ -1,11 +1,15 @@
+    /**
+     * Test the Command Adapter "Delete".
+     */
     public function testDeleteAction()
     {
         $adapter = new DeleteCommandAdapter();
-        $command = $adapter->createCommandFromRequest(
-            new DeleteRequest($this->request, $this->resolver)
-        );
+        $command = $adapter->createCommandFromRequest(new DeleteRequest($this->request, $this->resolver));
 
         $this->controller->deleteAction();
         Phake::verify($this->deleteHandler, Phake::times(1))->process($command);
-        Phake::verify($this->responseHandler, Phake::times(1))->create(['message' => '1 row deleted'], Response::HTTP_OK);
+        Phake::verify($this->responseHandler, Phake::times(1))->create(
+            ['message' => '1 row deleted'],
+            Response::HTTP_OK
+        );
     }
