--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Command/PatchRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Command/PatchRequestTest.php.twig
@@ -3,8 +3,6 @@ declare(strict_types = 1);
 
 namespace Tests\Presentation\Request\{{ entityName }}\Command;
 
-require_once __DIR__.'/../../../../TraitVerifyResolver.php';
-
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\CommandRequestInterface;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\RequestInterface;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\SymfonyStrategy;
@@ -14,43 +12,38 @@ use \Phake;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverStrategy;
 
 /**
-* Class PatchRequestTest
-* This class permits to test the PatchRequest class
-* @category {{ projectName }}
-* @package Test
-* @subpackage Presentation\Request\Command
-**/
+ * Class PatchRequestTest.
+ * This class permits to test the PatchRequest class.
+ *
+ * @category {{ projectName }}
+ * @package Test
+ * @subpackage Presentation\Request\Command
+ */
 class PatchRequestTest extends \PHPUnit_Framework_TestCase
 {
-
-    /**
-     * @var RequestInterface
-     */
+    /** @var RequestInterface */
     protected $requestStrategy;
-    /**
-     * @var ResolverInterface
-     */
+
+    /** @var ResolverInterface */
     protected $resolverStrategy;
-    /**
-     * @var NewRequest
-     */
+
+    /** @var PatchRequest */
     protected $request;
 
-    /*
-    * Configure the test
-    */
+    /**
+     * Configure the test.
+     */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
         $this->resolver = Phake::mock(ResolverStrategy::class);
         $this->request = new PatchRequest($this->SymfonyStrategy, $this->resolver);
-
     }
 
-    /*
-    * Verify that request implements QueryRequestInterface
-    */
-    public function testGetRequestInterface()
+    /**
+     * Verify that request implements CommandRequestInterface
+     */
+    public function testPatchRequestInterface()
     {
         $this->assertInstanceof(CommandRequestInterface::class, $this->request);
     }
